# Amazon-Quick-official-catalog

./: .gitignore  CONTRIBUTING.md  README.md  catalog.json  catalog.schema.json  main.py  pyproject.toml  zensical.toml
.github/workflows/: deploy-docs.yml
.quick-plugin/: marketplace.json
docs/: getting-started.md  index.md  skill-catalog.md
docs/assets/stylesheets/: custom.css
scripts/: docs_macros.py  json_format.py  skill_security.py
skills/amazon-quick-community/: SKILL.md
skills/amazon-quick/amazon-quick-community/: SKILL.md
skills/amazon-quick/skill-builder/: SKILL.md
skills/architecture-decision-record/: SKILL.md
skills/bill-pay-optimizer/: SKILL.md
skills/browser-data-scraper/: SKILL.md
skills/business-case-builder/: SKILL.md
skills/business-pulse/: SKILL.md
skills/communications/executive-voice-runtime-builder/: SKILL.md
skills/competitor-intel/: SKILL.md
skills/compliance-automation/: SKILL.md
skills/content-calendar-planner/: SKILL.md
skills/content-recycler/: SKILL.md
skills/content-writing/content-recycler/: SKILL.md
skills/content-writing/document-comparison/: SKILL.md
skills/content-writing/eliminate-ai-writing-tropes/: SKILL.md
skills/contract-clause-extractor/: SKILL.md
skills/customer-health-scorer/: SKILL.md
skills/data-classification-assistant/: SKILL.md
skills/deal-pipeline-manager/: SKILL.md
skills/demand-forecast-explainer/: SKILL.md
skills/dependency-critical-path-analyzer/: SKILL.md
skills/deposit-collection/: SKILL.md
skills/document-comparison/: SKILL.md
skills/ecommerce-conversion-insights/: SKILL.md
skills/eliminate-ai-writing-tropes/: SKILL.md
skills/email-campaign-builder/: SKILL.md
skills/file-organizer/: SKILL.md
skills/follow-up-cadence/: SKILL.md
skills/general-purpose/ooo-setup/: SKILL.md
skills/goal-tracker-reporter/: SKILL.md
skills/hr-policy-agent/: SKILL.md
skills/incident-postmortem-writer/: SKILL.md
skills/invoice-chaser/: SKILL.md
skills/job-to-invoice/: SKILL.md
skills/lead-prospector/: SKILL.md
skills/market-sizing-tool/: SKILL.md
skills/meeting-notes-to-actions/: SKILL.md
skills/month-end-close-orchestrator/: SKILL.md
skills/onboarding-orchestrator/: SKILL.md
skills/ooo-setup/: SKILL.md
skills/outreach-sequence-builder/: SKILL.md
skills/payroll-forecast/: SKILL.md
skills/performance-review-drafter/: SKILL.md
skills/presentation-theme-creator/: SKILL.md
skills/proposal-generator/: SKILL.md
skills/regulatory-change-monitor/: SKILL.md
skills/release-notes-generator/: SKILL.md
skills/research-paper-digest/: SKILL.md
skills/restaurant-morning-briefing/: SKILL.md
skills/retail-analytics-concierge/: SKILL.md
skills/retail-content-generator/: SKILL.md
skills/retail-merchant-briefing/: SKILL.md
skills/retail-supply-chain-pulse/: SKILL.md
skills/retrospective/: SKILL.md
skills/risk-register-builder/: SKILL.md
skills/seo-content-writer/: SKILL.md
skills/skill-builder/: SKILL.md
skills/slide-deck-from-doc/: SKILL.md
skills/social-post-creator/: SKILL.md
skills/standup-summarizer/: SKILL.md
skills/support-ticket-triager/: SKILL.md
skills/swot-analysis-generator/: SKILL.md
skills/teach-me/: SKILL.md
skills/template-enforcer/: SKILL.md
skills/translate-ms/: SKILL.md
skills/vulnerability-report-summarizer/: SKILL.md
(+265 files in other folders)
