[project]
name = "amazon-quick-official-marketplace"
version = "1.0.0"
description = "Official marketplace for Amazon Quick skills, plugins, and integrations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
build = "scripts.build:cli"
lint = "scripts.build:lint"
format-check = "scripts.build:format_check"
markdown-check = "scripts.build:markdown"
security-scan = "scripts.build:security"
release = "scripts.release:release"
docs-build = "scripts.build:docs"
docs-serve = "scripts.build:docs_serve"
help = "scripts.help:help"
fix = "scripts.build:fix"

[dependency-groups]
dev = [
    "bandit[toml]>=1,<2",
    "click>=8,<9",
    "loguru>=0.7,<1",
    "mdformat>=1,<2",
    "mkdocs-macros-plugin>=1,<2",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "ruff>=0.15,<1",
    "safety>=3,<4",
    "zensical",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".venv/",
    ".ruff_cache/",
    "node_modules/",
    "site/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "node_modules"]
skips = ["B101"]
